# basic_rag

./: .gitignore  README.md  main.py  pdf_parser.py  pyproject.toml
articles/: 00-INDEX-jsa-pertambangan.mdx  01-jsa-pengeboran-drilling.mdx  02-jsa-peledakan-blasting.mdx  03-jsa-penggalian-excavation.mdx  04-jsa-hauling-pengangkutan.mdx  05-jsa-geoteknik-slope-monitoring.mdx  06-jsa-maintenance-perbaikan-alat.mdx  07-jsa-kelistrikan-electrical.mdx  08-jsa-bekerja-ketinggian-wah.mdx  09-jsa-confined-space-ruang-terbatas.mdx  10-jsa-fuel-handling-pengisian-bbm.mdx
qdrant_storage/: raft_state.json
qdrant_storage/collections/jsample/0/: newest_clocks.json
qdrant_storage/collections/jsample/0/segments/20d59fed-afe1-4d3b-891c-4b5cf0cbc50f/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/jsample/0/segments/5bf1a2aa-780f-443f-9ff8-f1219da76195/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/jsample/0/segments/a0243b37-ad02-422f-b1d6-905040de7433/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/jsample/0/segments/b6a15501-ff95-4480-8757-2494a2ff8c09/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/jsample/0/segments/cf5ff590-5e29-496e-ae2c-15b45d7309bc/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/jsample/0/segments/e47b1bdf-d65f-4f5a-9a96-db25da133da4/: mutable_id_tracker.mappings  (+1 more)
qdrant_storage/collections/kic_hackaton/0/: newest_clocks.json  replica_state.json
(+2 files in other folders)
