[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-vector-stores-chroma>=0.5.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
]
